<resources>
    <string name="app_name">Mis mascotas (fragments)</string>
    <string name="titulo_favoritos">Mis mascotas favoritas</string>
    <string name="titulo_principal">Mis mascotas</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_contacto">Contacto</string>
    <string name="menu_acerca">Acerca de</string>
    <string name="btn_enviar">Enviar comentario</string>
    <string name="titulo_contacto">Dejanos tus comentarios</string>
    <string name="titulo_acerca">BIO del desarrollador</string>
    <string name="bio_nombre">Nombre:</string>
    <string name="bio_lugar_nacimiento">Lugar de nacimiento:</string>
    <string name="bio_programa">APP:</string>
    <string name="bio_fecha_desarrollo">Fecha de desarrollo:</string>
    <string name="bio_version">APP Versión:</string>
    <string name="bio_sobre_mi">Sobre mí:</string>

    <string name="bio_mi_nombre">Isabel Contreras</string>
    <string name="bio_mi_lugar_nac">Estado de México</string>
    <string name="bio_mi_info">Hola, esta es una aplicacion que he desarrollado en el curso de
                    "Desarrollo de aplicaciones con Android" de coursera. \n
                 Espero seguir aprendiendo aun más. ¡Mucho animo a todos los que llevan este curso!</string>
    <string name="app_version">0.0.1</string>
    <string name="app_fecha_desarrollo">Mayo 2020</string>
    <string name="boton_dialogo_ok">Aceptar</string>
</resources>
